--- a/rgym_exp/config/rg-swarm.yaml
+++ b/rgym_exp/config/rg-swarm.yaml
@@ -21,9 +21,9 @@ training:
 
 blockchain:
   alchemy_url: "https://gensyn-testnet.g.alchemy.com/public"
-  swarm_contract_address: ${oc.env:SWARM_CONTRACT,null} # This is set by modal-login in run_rl_swarm.sh
-  org_id: ${oc.env:ORG_ID,null} # This is set by modal-login in run_rl_swarm.sh
-  mainnet_chain_id: 685685 # currently unused, will be used with WalletSwarmCoordinator
+  swarm_contract_address: ${oc.env:SWARM_CONTRACT,null} 
+  org_id: ${oc.env:ORG_ID,null} 
+  mainnet_chain_id: 685685 
   modal_proxy_url: "http://localhost:3000/api/"
   swarm_coordinator_abi_path: "rgym_exp/contracts/SwarmCoordinator_0.4.2.json"
 
@@ -67,18 +67,33 @@ game_manager:
             - _target_: rgym_exp.src.rewards.RGRewards
   trainer:
     _target_: rgym_exp.src.trainer.GRPOTrainerModule
+    models:
+      - _target_: transformers.AutoModelForCausalLM.from_pretrained
+        pretrained_model_name_or_path: ${oc.env:MODEL_NAME, ${gpu_model_choice:${default_large_model_pool},${default_small_model_pool}}} 
     config:
       _target_: genrl.trainer.grpo_trainer.GRPOTrainerConfig
-      model_name_or_path: ${oc.env:MODEL_NAME, ${gpu_model_choice:${default_large_model_pool},${default_small_model_pool}}}
-      use_vllm: true
-      vllm_gpu_utilization: 0.9
-      # bitsandbytes quantization options (enable one at most)
-      load_in_4bit: false
-      load_in_8bit: false
       dtype: ${training.dtype}
       epsilon: 0.2
       epsilon_high: 0.28
       num_generations: ${training.num_generations}
+
+      # --- ADDED: CHOOSE YOUR BACKEND ---
+      # Set use_vllm to true for fast generation. The training model will not be quantized.
+      use_vllm: false
+
+      # Set use_bitsandbytes to true for memory-efficient training. Generation will use the quantized model.
+      # Note: If both are true, generation uses vLLM and training uses a quantized model.
+      use_bitsandbytes: true
+
+      # --- ADDED: vLLM Parameters (only used if use_vllm: true) ---
+      vllm_gpu_memory_utilization: 0.9
+
+      # --- ADDED: BitsAndBytes Parameters (only used if use_bitsandbytes: true) ---
+      bnb_load_in_4bit: true
+      bnb_load_in_8bit: false
+      bnb_4bit_quant_type: "nf4"
+      bnb_4bit_compute_dtype: "bfloat16"
+
     log_with: wandb
     log_dir: ${log_dir}
     judge_base_url: ${eval.judge_base_url}
